--- a/client-android/MatLedControl/app/src/main/res/values/strings.xml
+++ b/client-android/MatLedControl/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="draw">Draw</string>
+    <string name="simple_drawing">Simple Drawing</string>
+    <string name="choose_server">Choose Server</string>
+    <string name="searching_for_matrices">Searching for Matrices</string>
 </resources>
