--- a/client-android/MatLedControl/app/src/main/res/values/strings.xml
+++ b/client-android/MatLedControl/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="manual_script_load">Manual script load</string>
     <string name="refresh">Refresh</string>
     <string name="view_matrix_log">View Matrix Log</string>
+    <string name="shut_down_rpi">shut down RPI</string>
 </resources>
