killing a few bugs along the way, i have now arrived at a theoretically working point

--- a/client-android/MatLedControl/app/src/main/res/values/strings.xml
+++ b/client-android/MatLedControl/app/src/main/res/values/strings.xml
@@ -46,5 +46,6 @@
     <string name="err_could_not_communicate">Could not communicate with Matrix</string>
     <string name="wordclock_color_selection">Wordclock colors</string>
     <string name="color_copied">Color copied</string>
+    <string name="loading_wordclock_configuration">Loading WordClock configuration...</string>
 
 </resources>
