--- a/client-android/MatLedControl/app/src/main/res/values-de/strings.xml
+++ b/client-android/MatLedControl/app/src/main/res/values-de/strings.xml
@@ -40,6 +40,7 @@
     <string name="device_denied_connection_request_msg">Die Matrix hat die Verbindungsanfrage abgelehnt</string>
     <string name="restart_device_control">Matrix-Kontrolle neu initialisieren</string>
     <string name="view_device_log">Matrix-Log ansehen</string>
-    <string name="wordclock_color_selection">Wordclock-Farben</string>
     <string name="color_copied">Farbe kopiert</string>
+    <string name="device_communication_error">Fehlerhafte Ledmatrix-Kommunikation! Bitte App neustarten.</string>
+    <string name="loading_wordclock_configuration">Lade Ledmatrix-Konfigurationsdaten</string>
 </resources>
