--- a/client-android/MatLedControl/app/src/main/res/values/strings.xml
+++ b/client-android/MatLedControl/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="err_could_not_communicate">Could not communicate with Matrix</string>
     <string name="wordclock_color_selection">Wordclock colors</string>
     <string name="color_copied">Color copied</string>
-    <string name="loading_wordclock_configuration">Loading WordClock configuration...</string>
+    <string name="loading_wordclock_configuration">Loading LedMatrix configuration…</string>
+    <string name="device_communication_error">Led matrix communication error! Please restart the app.</string>
 
 </resources>
