--- a/client-android/MatLedControl/app/src/wordclock/res/values-de/strings.xml
+++ b/client-android/MatLedControl/app/src/wordclock/res/values-de/strings.xml
@@ -6,4 +6,6 @@
     <string name="restart_device_control">WordClock-Kontrolle neu initialisieren</string>
     <string name="view_device_log">WordClock-Log ansehen</string>
     <string name="searching_for_devices">Suche nach WordClocks</string>
+    <string name="wordclock_color_selection">Wordclock-Farben</string>
+    <string name="device_communication_error">Fehlerhafte WordClock-Kommunikation! Bitte App neustarten.</string>
 </resources>
