--- a/client-android/MatLedControl/app/src/main/res/values/strings.xml
+++ b/client-android/MatLedControl/app/src/main/res/values/strings.xml
@@ -48,5 +48,6 @@
     <string name="color_copied">Color copied</string>
     <string name="loading_wordclock_configuration">Loading LedMatrix configuration…</string>
     <string name="device_communication_error">Led matrix communication error! Please restart the app.</string>
+    <string name="randomize_colors">Randomize colors</string>
 
 </resources>
