--- a/client-android/MatLedControl/app/src/main/res/values/strings.xml
+++ b/client-android/MatLedControl/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="choose_device">Choose Matrix</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
-    <string name="error_occurred">An exception occurred!</string>
+    <string name="error_occurreden">An exception occurred!</string>
     <string name="ok">@android:string/ok</string>
     <string name="sp_last_connected_device" translatable="false">last_connected_matrix</string>
     <string name="print_tester_debug">Echo test (debug)</string>
@@ -49,5 +49,9 @@
     <string name="loading_wordclock_configuration">Loading LedMatrix configuration…</string>
     <string name="device_communication_error">Led matrix communication error! Please restart the app.</string>
     <string name="randomize_colors">Randomize colors</string>
+    <string name="enable_display_at">Enable display at %d o\'clock</string>
+    <string name="disable_display_at">Disable display at %d o\'clock</string>
+    <string name="enable_display_time_limits">Enable display time limits</string>
+    <string name="wordclock_settings">Wordclock settings</string>
 
 </resources>
