fix missing translation

--- a/client-android/MatLedControl/app/src/main/res/values-de/strings.xml
+++ b/client-android/MatLedControl/app/src/main/res/values-de/strings.xml
@@ -55,4 +55,5 @@
         <item>Wöchentlich</item>
         <item>Monatlich</item>
     </string-array>
+    <string name="randomly_choose_colors">Zufällige Farben</string>
 </resources>
