--- a/client-android/MatLedControl/app/src/main/res/values/strings.xml
+++ b/client-android/MatLedControl/app/src/main/res/values/strings.xml
@@ -53,6 +53,8 @@
     <string name="enable_display_time_limits">Enable display time limits</string>
     <string name="wordclock_settings">Wordclock settings</string>
     <string name="randomly_choose_colors">Random colors</string>
+    <string name="about">About</string>
+    <string name="about_text">Developed by enra64 and gSilas on github.  Thanks to Pavel Sikun for his VintageChroma library under the Apache v2 license!  Thanks to Josef Raska for his Console library, also under Apache v2.  See http://www.apache.org/licenses/LICENSE-2.0.</string>
     <string-array name="randomization_intervals">
         <item>Hourly</item>
         <item>Daily</item>
