kind of shoddy fixes for all the issues on android 5.1 (e.g. mostly networkOnMainThread exceptions)

--- a/client-android/MatLedControl/app/src/main/res/values/strings.xml
+++ b/client-android/MatLedControl/app/src/main/res/values/strings.xml
@@ -54,8 +54,10 @@
     <string name="wordclock_settings">Wordclock settings</string>
     <string name="randomly_choose_colors">Random colors</string>
     <string name="about">About</string>
-    <string name="about_text">Developed by enra64 and gSilas on github.  Thanks to Pavel Sikun for his VintageChroma library under the Apache v2 license!  Thanks to Josef Raska for his Console library, also under Apache v2.  See http://www.apache.org/licenses/LICENSE-2.0.</string>
+    <string name="about_text">Developed by enra64 and gSilas on github.\\n\\nThanks to Pavel Sikun for his VintageChroma library under the Apache v2 license!\\n\\nThanks to Josef Raska for his Console library, also under Apache v2.  See http://www.apache.org/licenses/LICENSE-2.0.</string>
     <string name="send_feedback">Send feedback</string>
+    <string name="connected_to">Connected to</string>
+    <string name="lost_connection">" lost connection"</string>
     <string-array name="randomization_intervals">
         <item>Hourly</item>
         <item>Daily</item>
