--- a/client-android/MatLedControl/app/src/main/res/values/strings.xml
+++ b/client-android/MatLedControl/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="send_feedback">Send feedback</string>
     <string name="connected_to">Connected to</string>
     <string name="lost_connection">" lost connection"</string>
+    <string name="wake_up_light">Wake up light</string>
     <string-array name="randomization_intervals">
         <item>Hourly</item>
         <item>Daily</item>
