--- a/client-android/MatLedControl/app/src/main/res/values-de/strings.xml
+++ b/client-android/MatLedControl/app/src/main/res/values-de/strings.xml
@@ -59,6 +59,7 @@
     <string name="about">Infos</string>
     <string name="about_text">Entwickelt von enra64 und gSilas auf github.\n\nDanke an Pavel Sikun für seine VintageChrome-Library!\n\nDanke an Josef Raska für seine Library Console!\n\nBeide Bibliotheken wurden unter der Apache v2-Lizenz (verfügbar unter http://www.apache.org/licenses/LICENSE-2.0) veröffentlicht.</string>
     <string name="send_feedback">Feedback senden</string>
-    <string name="connected_to">"Verbunden mit "</string>
-    <string name="lost_connection">" hat die Verbindung verloren"</string>
+    <string name="connected_to">\"Verbunden mit \"</string>
+    <string name="lost_connection">" hat sich beendet"</string>
+    <string name="wake_up_light">Wecklampe</string>
 </resources>
