--- a/client-android/MatLedControl/app/src/main/res/values/strings.xml
+++ b/client-android/MatLedControl/app/src/main/res/values/strings.xml
@@ -61,8 +61,8 @@
     <string name="about">About</string>
     <string name="about_text">Developed by enra64 and gSilas on github.\\n\\nThanks to Pavel Sikun for his VintageChroma library under the Apache v2 license!\\n\\nThanks to Josef Raska for his Console library, also under Apache v2.  See http://www.apache.org/licenses/LICENSE-2.0.</string>
     <string name="send_feedback">Send feedback</string>
-    <string name="connected_to">Connected to</string>
-    <string name="lost_connection">" lost connection"</string>
+    <string name="connected_to">\"Connected to \"</string>
+    <string name="lost_connection">" has stopped"</string>
     <string name="wake_up_light">Wake up light</string>
     <string-array name="randomization_intervals">
         <item>Hourly</item>
